--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
             <div id="review-analyzing" class="review-analyzing">
               <div class="loading-dots"><span></span><span></span><span></span></div>
-              <div class="loading-text">Analyzing with Whisper + Claude...</div>
+              <div class="loading-text">Analyzing with Whisper API + Claude...</div>
             </div>
 
             <div id="review-results" class="review-results hidden">
