--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
         <!-- SCREEN 2.5: Generating (shows answers while loading) -->
         <div id="screen-generating" class="demo-screen">
           <div class="screen-pad center-content">
-            <div class="cp-brand small">Your thoughts</div>
-            <div id="gen-answers" class="gen-answers"></div>
+            <div class="gen-icon">✦</div>
+            <h3 class="gen-title">Organizing your thoughts</h3>
+            <p class="gen-sub" id="gen-summary"></p>
             <div class="loading-dots"><span></span><span></span><span></span></div>
-            <div class="loading-text">Building your talking points...</div>
           </div>
         </div>
 
