updated copy of button

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
             <div class="bp-actions" style="margin-top:16px">
               <button id="btn-retake" class="btn-secondary">Retake</button>
-              <button id="btn-practice-again" class="btn-action hidden">Practice Again with Updates →</button>
+              <button id="btn-practice-again" class="btn-action hidden">Practice with Refined Script →</button>
               <button id="btn-download" class="btn-action hidden" style="background:#25f4ee;color:#000">Download</button>
             </div>
           </div>
