--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0"/>
 <title>Creator Prep — AI-Powered Creator Activation for TikTok</title>
+<link rel="icon" type="image/svg+xml" href="favicon.svg"/>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet"/>
 <link rel="stylesheet" href="style.css"/>
 </head>
@@ -349,7 +350,7 @@
 
             <div class="bp-actions" style="margin-top:16px">
               <button id="btn-retake" class="btn-secondary">Retake</button>
-              <button id="btn-practice-again" class="btn-action hidden">Practice with Refined Script →</button>
+              <button id="btn-practice-again" class="btn-action hidden">Practice with refined script →</button>
               <button id="btn-download" class="btn-action hidden" style="background:#25f4ee;color:#000">Download</button>
             </div>
           </div>
