--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet"/>
 <link rel="stylesheet" href="style.css"/>
+<script>
+  !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}(p=t.createElement("script")).type="text/javascript",p.async=!0,p.src=s.api_host+"/static/array.js",(r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="init capture register register_once unregister opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing reset isFeatureEnabled getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys onFeatureFlags onSessionId".split(" "),n=0;n<o.length;n++)g(u,o[n]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
+  posthog.init('phc_sc1VQaMZlHn5AR8USAdGiaZpDcdv3NrQohOlPjpx7tp', {api_host: 'https://us.i.posthog.com', person_profiles: 'anonymous'});
+</script>
 </head>
 <body>
 
@@ -459,7 +463,7 @@
     <div class="footer-brand"><span class="brand-icon">✦</span> Creator Prep</div>
     <p>95% of TikTok users have something to say. They just need help organizing it.</p>
     <div class="footer-links">
-      <a href="https://github.com/randomindianguy/creator-prep" target="_blank">GitHub</a>
+      <a href="https://github.com/randomindianguy/tiktok-confidence-coach" target="_blank">GitHub</a>
       <span>·</span>
       <a href="#demo">Live Demo</a>
     </div>
